--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
   "homepage": "https://github.com/adobe/aem-boilerplate#readme",
   "devDependencies": {
     "@babel/eslint-parser": "7.28.5",
-    "eslint": "8.57.1",
+    "@eslint/js": "^9.39.1",
+    "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-import": "2.32.0",
+    "eslint-plugin-vue": "^10.5.1",
+    "globals": "^16.5.0",
     "stylelint": "16.25.0",
-    "stylelint-config-standard": "39.0.1"
+    "stylelint-config-standard": "39.0.1",
+    "typescript-eslint": "^8.47.0"
   }
 }
